--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -153,7 +153,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeSubstrate=0,VisualizeGroom=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,VisualizeMotionVectors=0,VisualizeReprojection=0,VisualizeTemporalUpscaler=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,NaniteMeshes=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,VisualizeLevelInstanceEditing=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,Cloud=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeVolumetricCloudEmptySpaceSkipping=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,DebugDrawDistantVirtualSMLights=0,VirtualTextureResidency=1,InputDebugVisualizer=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenShortRangeAmbientOcclusion=1,VisualizeGPUSkinCache=0,ShaderPrint=1",GameShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeSubstrate=0,VisualizeGroom=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,VisualizeMotionVectors=0,VisualizeReprojection=0,VisualizeTemporalUpscaler=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,NaniteMeshes=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,VisualizeLevelInstanceEditing=1,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,Cloud=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeVolumetricCloudEmptySpaceSkipping=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,DebugDrawDistantVirtualSMLights=0,VirtualTextureResidency=1,InputDebugVisualizer=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenShortRangeAmbientOcclusion=1,VisualizeGPUSkinCache=0,ShaderPrint=1",BufferVisualizationMode="",NaniteVisualizationMode="",LumenVisualizationMode="",StrataVisualizationMode="",GroomVisualizationMode="",VirtualShadowMapVisualizationMode="",RayTracingDebugVisualizationMode="",GPUSkinCacheVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/Maps
+ContentBrowserTab1.SelectedPaths=/Game/Cats/Blueprint
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -204,7 +204,7 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
-LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
+LastLevel=/Game/Cats/Map/ThirdPersonMap
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
@@ -409,9 +409,9 @@ MouseArea_C="\"Object\" \"Object.Default.Polygon.Polygon[6]\" \"Object.Default.P
 PostProcessVolume="\"Object\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Cats/Blueprint/Cat.Cat
-OpenAssetsAtExit=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap:PersistentLevel.ThirdPersonMap
+CleanShutdown=True
+OpenAssetsAtExit=/Game/Cats/Blueprint/ABP_Human.ABP_Human
+OpenAssetsAtExit=/Game/Cats/Blueprint/Adults.Adults
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -424,10 +424,10 @@ bHideLevelInstanceContent=True
 bDisableLoadingOfLastLoadedRegions=False
 bBugItGoLoadRegion=False
 bShowCellCoords=False
-PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()))
+PerWorldEditorSettings=(("/Game/Cats/Map/ThirdPersonMap.ThirdPersonMap", ()),("/Game/Cats/Map/ThirdPersonMap.ThirdPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=-1600.000 Y=160.000
+ScreenPosition=X=320.000 Y=160.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -445,7 +445,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=D:/Documents/Unreal Projects/ProjectCats/Content/ThirdPerson/Maps
+UNR=D:/Documents/Unreal Projects/ProjectCats/Content/Cats/Map
 BRUSH=D:/Documents/Unreal Projects/ProjectCats/Content/
 FBX=D:/Documents/Unreal Projects/ProjectCats/Content/
 FBXAnim=D:/Documents/Unreal Projects/ProjectCats/Content/
@@ -1485,14 +1485,17 @@ PinnedCommandList.TimeStamp=2023.10.11-13.17.11
 PinnedCommandList.LastCompileMethod=Unknown
 AnimationEditor.TimeStamp=2023.10.11-13.16.58
 AnimationEditor.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2023.10.11-13.17.07
+HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
 RecentsFiles=C:/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [MRU]
-MRUItem0=/Game/ThirdPerson/Maps/ThirdPersonMap
-MRUItem1=/Game/Cats/Map/StartingScreen
+MRUItem0=/Game/Cats/Map/ThirdPersonMap
+MRUItem1=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem2=/Game/Cats/Map/StartingScreen
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -1502,11 +1505,11 @@ bUseUnsortedMenus=False
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/Attack1.Attack1,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/Attack2.Attack2,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/Interact.Interact,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/Miaou.Miaou
 InputAction=
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
-WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash
+WorldPartitionRuntimeSpatialHash=
 CapsuleComponent=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SplineComponent.Selected Points.SplinePointDetails,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections
 SkeletalMeshComponent=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SplineComponent.Selected Points.SplinePointDetails,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections
 SceneComponent=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SplineComponent.Selected Points.SplinePointDetails,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections
-Adults_C=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust
+Adults_C=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SplineComponent.Selected Points.SplinePointDetails,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections
 StaticMeshComponent=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision
 StaticMeshActor=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SplineComponent.Selected Points.SplinePointDetails,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections
 PropertyWrapper=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SplineComponent.Selected Points.SplinePointDetails,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections
@@ -2754,29 +2757,29 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Cats/Blueprint/Cat
-MRUItem1=/Game/ThirdPerson/Maps/ThirdPersonMap
-MRUItem2=/Game/Cats/Blueprint/Mouse
-MRUItem3=/Game/Cats/Blueprint/MouseArea
-MRUItem4=/Game/Cats/Blueprint/SaveGame
-MRUItem5=/Game/Cats/GameMode/MyGameMode
-MRUItem6=/Game/Cats/Map/StartingScreen
-MRUItem7=/Game/Cats/Blueprint/Children
-MRUItem8=/Game/Cats/Blueprint/Adults
-MRUItem9=/Game/Characters/Mannequins/Animations/Manny/BS_MM_WalkRun
-MRUItem10=/Game/Cats/Blueprint/ABP_Human
-MRUItem11=/Game/ThirdPerson/Input/Actions/IA_Move
-MRUItem12=/Game/Cats/Blueprint/BaseEntity
-MRUItem13=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem14=/Game/Cats/Assets/Sound/MusicSoundMix
-MRUItem15=/Game/Cats/Widget/SoundMenu
-MRUItem16=/Game/Cats/Map/StartingScreenGameMode
-MRUItem17=/Game/Cats/Assets/Picture/DemonCat
-MRUItem18=/Game/Cats/Widget/Menu
-MRUItem19=/Game/Cats/Assets/Sound/miaou_RACvkaU
+MRUItem0=/Game/Cats/Blueprint/Adults
+MRUItem1=/Game/Cats/Map/ThirdPersonMap
+MRUItem2=/Game/Cats/Blueprint/ABP_Human
+MRUItem3=/Game/Cats/Blueprint/Cat
+MRUItem4=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem5=/Game/Cats/Blueprint/Mouse
+MRUItem6=/Game/Cats/Blueprint/MouseArea
+MRUItem7=/Game/Cats/Blueprint/SaveGame
+MRUItem8=/Game/Cats/GameMode/MyGameMode
+MRUItem9=/Game/Cats/Map/StartingScreen
+MRUItem10=/Game/Cats/Blueprint/Children
+MRUItem11=/Game/Characters/Mannequins/Animations/Manny/BS_MM_WalkRun
+MRUItem12=/Game/ThirdPerson/Input/Actions/IA_Move
+MRUItem13=/Game/Cats/Blueprint/BaseEntity
+MRUItem14=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem15=/Game/Cats/Assets/Sound/MusicSoundMix
+MRUItem16=/Game/Cats/Widget/SoundMenu
+MRUItem17=/Game/Cats/Map/StartingScreenGameMode
+MRUItem18=/Game/Cats/Assets/Picture/DemonCat
+MRUItem19=/Game/Cats/Widget/Menu
 
 [MaterialEditor]
 PrimType=1
@@ -3024,10 +3027,10 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [PlacementMode]
+RecentlyPlaced=/Game/Cats/Blueprint/Children.Children;
+RecentlyPlaced=/Game/Cats/Blueprint/Adults.Adults;
 RecentlyPlaced=/Game/Cats/Blueprint/MouseArea.MouseArea;
 RecentlyPlaced=/Game/Cats/Blueprint/Mouse.Mouse;
-RecentlyPlaced=/Game/Cats/Blueprint/Adults.Adults;
-RecentlyPlaced=/Game/Cats/Blueprint/Children.Children;
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 RecentlyPlaced=/Game/Cats/Blueprint/Cat.Cat;
 
